# soil-metagenomics

./: .gitignore  README.md  environment.yml  functions.py  information.ipynb  new_cluster.ipynb  organization.ipynb  organization_nap.ipynb  pH_perturbation.py  pH_perturbation.sh  pH_perturbations2.py  pH_perturbations2.sh  pyproject.toml  setup.py  track_clusters.py
alphafold2/: README.md  pairwise_align.py  pymol_generate_images.py  pymol_helpers.py  pymol_pairwise_align.py  run_alphafold_cpu.sh  run_alphafold_gpu.sh  structure_analysis.py
data/: 03-2_MMseqs2_2nd_clustering_all_soil.sh  README.md  T0_sampleIDs.tsv  all.coassembly_proteins_1st_ClusterDB_repseq_2ndClusterDB_frequency.tsv  function_subset.tsv  metadata.tsv  params.csv
notebooks/: KOs.ipynb  cluster_map.ipynb  comprehensive_clusters.ipynb  ecoli_spikein_coverage.ipynb  helloworld.ipynb  information.ipynb  information_2.ipynb  model_regression.ipynb  model_regression_fixpH.ipynb  model_regression_nonlinear.ipynb  nb_aaseq_explore.ipynb  nb_aaseq_explore_K00362.ipynb  nb_aaseq_explore_K00370.ipynb  nb_aaseq_explore_K02567.ipynb  nb_aaseq_explore_nap.ipynb  nb_aaseq_explore_nar.ipynb  nb_sca_K00370.ipynb  nb_structural_alignment_by_cluster.ipynb  organization.ipynb  organization_nap.ipynb  organization_nir.ipynb  sca_K00370.ipynb  simulate_dynamics.ipynb  spikein_coverage.ipynb  synthetic_model_regression.ipynb
scripts/: 03-2_MMseqs2_2nd_clustering_all_soil.sh  aa_sequence.py  aa_sequence.sh  aa_sequence2.py  aa_sequence2.sh  assembly.py  assembly08.py  assembly09.py  assembly_271.py  assembly_508.py  (+33 more)
(+534 files in other folders)
