[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mgsa"
dynamic = ["version"]
requires-python = ">= 3.8"
readme = "README.md"
license = { file = "LICENSE.txt" }
description = "Metagenomic soil analysis."
authors = [
  {name = "Joseph Landsittel"},
  {name = "Addison Howe"},
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "scikit-learn",
  "npeet-plus",
  "biopython",
  "ipykernel",
  "ipywidgets"
]

[project.scripts]
mgsa = "mgsa.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest",
]
